[Improve][Engine] Close ClassLoader explicitly to prevent resource leak
When ClassLoader reference count reaches zero, the ClassLoader was only
removed from the cache but never closed. This causes JAR file handle
leaks and Metaspace growth in long-running SeaTunnel Engine clusters.

Changes:
- Call URLClassLoader.close() when reference count reaches zero
- Close all ClassLoaders when ClassLoaderService is shut down
- Disable JAR URL connection cache to prevent stale file handles
- Add optional deep clean mode for URLClassPath and JarFileFactory
  global cache cleanup (disabled by default, requires --add-opens)